objects/Contact.object
<CustomObject>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Title__c</fullName>
        <label>Old Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Ptnr_Onbd_Fmwk__Onboarding__c.Ptnr_Onbd_Fmwk__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Ptnr_Onbd_Fmwk__Onboarding__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Start_Date__c</fullName>
        <inlineHelpText>This determines when the contact&apos;s onboarding journey needs to begin.When left blank, start date is taken to be the date when the onboarding plan is attached to the contact. It drives calculation of step duration.</inlineHelpText>
        <label>Onboarding Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Onboarding_Status__c</fullName>
        <inlineHelpText>Holds the current status of the onboarding plan for the contact. Key field to drive business process based on journey status. Use it to trigger notifications, posts, requesting of funds etc.</inlineHelpText>
        <label>Onboarding Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Role_Function__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <description>When defining a partner contact, use these values to broadly identify the contact&apos;s function. Field used to generate onboarding tasks apt for role if tasks are defined to map to functions</description>
        <inlineHelpText>When defining a partner contact, use these values to broadly identify the contact&apos;s function. Field used to generate onboarding tasks apt for role if tasks are defined to map to functions</inlineHelpText>
        <label>Role Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ptnr_Onbd_Fmwk__Partner_Persona</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Certification_Level_c__c</fullName>
        <description>What: Partner Contact certification level, used on the Partner Contact layout.</description>
        <label>Certification Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Associate</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Architect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Cust360_CSAT__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 CSAT</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_ChurnRisk__c</fullName>
        <description>What: used in the Customer 360 Multiple Object Highlight component.</description>
        <label>Risk of Churn</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Contact_Picture_URL__c</fullName>
        <description>What: used by Customer 360 Component</description>
        <label>Cust360 Contact Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Id__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Metric1__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Metric 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Cust360_Metric2__c</fullName>
        <description>What: Custom 360 Component Field used by SDO_Service_Customer360 Components.</description>
        <label>Cust360 Metric 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Dataset_Split__c</fullName>
        <description>SDO Maps Contact number field to split maps-related datasets equally and easily 02-02-23</description>
        <label>Contact Dataset Split</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Days_Since_Last_Visit__c</fullName>
        <description>SDO MAPS number field to represent days since visited Contacts in territories. This highlights neglected accounts easily in reports and visually in Maps. 02-02-23</description>
        <label>Days Since Last Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Tag_Contact__c</fullName>
        <description>SPM MAPS Contact dataset tag to help manage datasets in Maps and Territory Planning. 02-03-23 AB</description>
        <label>Tag Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_MAPS_Value_Tier__c</fullName>
        <description>SDO MAPS Contact tier field for maps routing and territory planning optimization and segmentation scenarios. 02-02-23 AB</description>
        <label>Value Tier</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_PA_Inclusive_Preferred_Name__c</fullName>
        <description>What: Inclusive Field for Preferred Name</description>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_PA_Inclusive_Pronouns__c</fullName>
        <description>What: Inclusivity Field for preferred Pronoun.</description>
        <label>Preferred Pronoun</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDO_General_Inclusive_Pronouns</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PA_Inclusive_TDD_TTY__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Inclusivity for Impaired hearing</description>
        <inlineHelpText>Does this individual have impaired hearing?</inlineHelpText>
        <label>TDD / TTY Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_PA_Preferred_Contact_Channel__c</fullName>
        <description>What: The preferred contact method for this contact</description>
        <label>Preferred Contact Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Facebook Messenger</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_PA_Year_of_Birth__c</fullName>
        <description>What: Used by the Identity and Verification (ID&amp;V) flow.</description>
        <inlineHelpText>Used by the Identity and Verification (ID&amp;V) flow.</inlineHelpText>
        <label>Year of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1989</fullName>
                </value>
                <value>
                    <fullName>1988</fullName>
                </value>
                <value>
                    <fullName>1987</fullName>
                </value>
                <value>
                    <fullName>1986</fullName>
                </value>
                <value>
                    <fullName>1985</fullName>
                </value>
                <value>
                    <fullName>1984</fullName>
                </value>
                <value>
                    <fullName>1983</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Access__c</fullName>
        <label>B2B Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Viewer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>B2B Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>B2B Approver Contacts</relationshipLabel>
        <relationshipName>B2B_Approver_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SCOM_OOA_Budget_Limit__c</fullName>
        <label>B2B Budget Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Rider_BotContext__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: A reference to the most recent service appointment an outbound notification was sent about. Who: SFS/FSL team</description>
        <inlineHelpText>A reference to the most recent service appointment an outbound notification was sent about</inlineHelpText>
        <label>Rider Context</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Rider_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Denotes if the Contact is allowed to interact with Rider</description>
        <inlineHelpText>Denotes if the Contact is allowed to interact with Rider</inlineHelpText>
        <label>Rider Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Rider_ServiceTerritory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: The Service Territory of the Contact (for Rider to schedule service appointments)</description>
        <inlineHelpText>The Service Territory of the Contact (for Rider to schedule service appointments)</inlineHelpText>
        <label>Rider Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Tracker_BotContext__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Used by the Tracker Bot</description>
        <label>Tracker BotContext</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Contacts (Tracker BotContext)</relationshipLabel>
        <relationshipName>TContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Month_of_Birth__c</fullName>
        <description>What: Used by the Identity and Verification (ID&amp;V) flow. Who: Service Team</description>
        <inlineHelpText>Used by the Identity and Verification (ID&amp;V) flow.</inlineHelpText>
        <label>Month of Birth</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Primary_Messaging_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Relationship to Messaging User. Used in multiple flows for Service. Who: Service Cloud Team.</description>
        <label>Primary Messaging User</label>
        <referenceTo>MessagingEndUser</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Service_SMS_Message__c</fullName>
        <description>What: The content of the SMS message to send out. This will be triggered by a process builder, and should be updated via quick action only. Used in the Service - Contact - Send Ad-hoc SMS Flow. Who: Service Team</description>
        <label>SMS Message</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chronos Bot Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts_Chronos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Record_Email_Doesn_t_Match__c</fullName>
        <formula>AND(
  NOT(ISBLANK( User_Record__c )) ,
  Email !=  User_Record__r.Email 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Record Email Doesn&apos;t Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Record</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_record_email_prompt_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User record email prompt hidden?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is no longer used.</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Account Engagement Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Account Engagement and are available to customers using Account Engagement Pro Edition and Account Engagement Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Account Engagement Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Account Engagement Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Account Engagement campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Account Engagement Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Account Engagement Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when an Account Engagement tracked anonymous visitor first became a known prospect.</description>
        <label>Account Engagement Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Account Engagement created date represents the date and time at which the Prospect record was created in Account Engagement. This will often differ from your Salesforce.com created date.</description>
        <label>Account Engagement Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Account Engagement First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Account Engagement First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Account Engagement First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Account Engagement First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Account Engagement grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Account Engagement Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Account Engagement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Account Engagement Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Account Engagement score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Account Engagement. From there you can view his or her complete activity history. This URL is generated within the Account Engagement system and cannot be edited in Salesforce.com.</description>
        <label>Account Engagement URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Contact_Picture_URL__c</fullName>
        <label>Cust360 Contact Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Engagement_Score__c</fullName>
        <label>Cust360 Engagement Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Id__c</fullName>
        <label>Cust360 Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Metric1__c</fullName>
        <label>Cust360 Metric 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Metric2__c</fullName>
        <label>Cust360 Metric 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Metric3__c</fullName>
        <label>Cust360 Metric 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Cust360_Purchase_Score__c</fullName>
        <label>Cust360 Purchase Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xDO_MDC_Propensity_to_Churn__c</fullName>
        <label>Propensity to Churn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>BulkMessageContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Bulk_SMS_Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>SDO_Sales_Contacts_for_Your_Assigned_Program</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Contacts for Your Assigned Program</label>
    </listViews>
    <recordTypes>
        <fullName>SDO_Contact</fullName>
        <active>true</active>
        <description>For all contacts.</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>SDO_Partner_Contact</fullName>
        <active>true</active>
        <description>For contacts who are partners, distributors or resellers.</description>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>